--- a/app/src/main/res/layout/movie_details_review_item.xml
+++ b/app/src/main/res/layout/movie_details_review_item.xml
@@ -43,6 +43,7 @@
                 android:layout_width="100dp"
                 android:layout_height="30dp"
                 android:layout_margin="10dp"
+                android:textColor="@color/black"
                 android:text="@{details.author_details.name}"
                 app:layout_constraintLeft_toRightOf="@id/image"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -54,6 +55,7 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="12dp"
                 android:text="author rating"
+                android:textColor="@color/black"
                 app:layout_constraintLeft_toRightOf="@id/image"
                 app:layout_constraintTop_toBottomOf="@id/textview1" />
 
