--- a/app/src/main/res/layout/movie_details_review_item.xml
+++ b/app/src/main/res/layout/movie_details_review_item.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/grey"
+        android:padding="5dp"
         >
 
         <ImageView
@@ -21,6 +22,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -29,6 +31,8 @@
             app:layout_constraintStart_toEndOf="@id/profileImage"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginLeft="10dp">
+
+
 
 
             <TextView
